# ReversiGame-

./: CMakeLists.txt
